--- a/weapons/rifles_asaltos/xm4.html
+++ b/weapons/rifles_asaltos/xm4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles del XM4</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/BO6/styles/style.css">
 </head>
 <body>
     <!-- Header -->
@@ -12,14 +12,14 @@
         <h1>Detalles del XM4</h1>
         <nav>
             <ul class="nav">
-                <li><a href="../../../index.html">Inicio</a></li>
-                <li><a href="../../../categories/assault_rifles.html">Fusiles de Asalto</a></li>
-                <li><a href="../../../dashboard.html">Mi Progreso</a></li>
+                <li><a href="/BO6/index.html">Inicio</a></li>
+                <li><a href="/BO6/categories/assault_rifles.html">Fusiles de Asalto</a></li>
+                <li><a href="/BO6/dashboard.html">Mi Progreso</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- Main Content --> 
+    <!-- Main Content -->
     <main class="content">
         <section id="weapon-details">
             <h2>Desafíos para el XM4</h2>
