--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="categories/categories_index.html">Categorías</a></li>
                 <li><a href="dashboard.html">Mi Progreso</a></li>
+                <li><a href="#login" onclick="alert('Función no implementada aún')">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -22,18 +23,10 @@
     <!-- Main Content -->
     <main>
         <section id="welcome">
-            <h2>¡Bienvenido al Rastreador de Camuflajes!</h2>
-            <p>Gestiona tu progreso para desbloquear los camuflajes Oro, Diamante, Espina Oscura y Materia Oscura en Call of Duty: Black Ops 6.</p>
-        </section>
-
-        <section id="categories">
-            <h3>Categorías de armas</h3>
-            <div class="categories-list">
-                <div class="category">
-                    <a href="categories/categories_index.html">
-                        <h4>Explorar Categorías</h4>
-                    </a>
-                </div>
+            <div class="welcome-container">
+                <h2>¡Bienvenido al Rastreador de Camuflajes!</h2>
+                <p>Gestiona tu progreso para desbloquear los camuflajes Oro, Diamante, Espina Oscura y Materia Oscura en Call of Duty: Black Ops 6.</p>
+                <a href="categories/categories_index.html" class="btn">Explorar Categorías</a>
             </div>
         </section>
 
@@ -47,10 +40,5 @@
     <footer>
         <p>&copy; 2025 Camo Tracker | Creado por Samueh02</p>
     </footer>
-
-    <script>
-        // Placeholder JavaScript for interactivity (e.g., future progress tracking)
-        console.log("Camo Tracker initialized.");
-    </script>
 </body>
 </html>
