--- a/weapons/rifles_asaltos/xm4.html
+++ b/weapons/rifles_asaltos/xm4.html
@@ -4,7 +4,126 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles del XM4</title>
-    <link rel="stylesheet" href="/BO6/styles/style.css">
+    <style>
+        /* General Styles */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        /* Header */
+        header {
+            background-color: #222;
+            color: white;
+            padding: 1.5rem;
+            text-align: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        header h1 {
+            font-size: 2.2rem;
+            margin: 0;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 1rem 0 0 0;
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+        }
+
+        nav ul li a {
+            color: #FFA500;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.1rem;
+            transition: color 0.3s ease;
+        }
+
+        nav ul li a:hover {
+            color: #FF7F00;
+        }
+
+        /* Main Content */
+        main {
+            max-width: 900px;
+            margin: 2rem auto;
+            background-color: white;
+            border-radius: 10px;
+            padding: 2rem;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            font-size: 1.8rem;
+            margin-bottom: 1rem;
+            color: #222;
+        }
+
+        .section-title {
+            font-size: 1.4rem;
+            color: #FFA500;
+            margin-bottom: 0.8rem;
+            border-bottom: 2px solid #ddd;
+            padding-bottom: 0.5rem;
+        }
+
+        .challenge-list {
+            list-style: none;
+            padding: 0;
+            margin: 1rem 0;
+        }
+
+        .challenge-list li {
+            margin: 0.8rem 0;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        input[type="checkbox"] {
+            width: 18px;
+            height: 18px;
+            accent-color: #FFA500;
+            cursor: pointer;
+        }
+
+        /* Footer */
+        footer {
+            background-color: #222;
+            color: white;
+            text-align: center;
+            padding: 1.5rem;
+            margin-top: 2rem;
+        }
+
+        footer p {
+            margin: 0;
+        }
+
+        /* Button Styles */
+        .btn {
+            display: inline-block;
+            background-color: #FFA500;
+            color: white;
+            padding: 0.8rem 1.5rem;
+            font-size: 1.1rem;
+            font-weight: bold;
+            border-radius: 5px;
+            text-decoration: none;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+        }
+
+        .btn:hover {
+            background-color: #FF7F00;
+            transform: translateY(-3px);
+        }
+    </style>
 </head>
 <body>
     <!-- Header -->
@@ -12,11 +131,12 @@
         <h1>Detalles del XM4</h1>
         <nav>
             <ul class="nav">
-                <li><a href="/BO6/index.html">Inicio</a></li>
-                <li><a href="/BO6/categories/assault_rifles.html">Fusiles de Asalto</a></li>
-                <li><a href="/BO6/dashboard.html">Mi Progreso</a></li>
+                <li><a href="../../index.html">Inicio</a></li>
+                <li><a href="../../categories/categories_index.html">Categorías</a></li>
+                <li><a href="../../dashboard.html">Mi Progreso</a></li>
             </ul>
         </nav>
+        
     </header>
 
     <!-- Main Content -->
