--- a/dashboard.html
+++ b/dashboard.html
@@ -5,76 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Progreso</title>
     <link rel="stylesheet" href="styles/style.css">
-    <style>
-        /* Progress Bar Styles */
-        .progress-container {
-            background-color: #f4f4f4;
-            border: 1px solid #ddd;
-            border-radius: 20px;
-            overflow: hidden;
-            position: relative;
-            height: 30px;
-            margin: 10px 0;
-            width: 100%;
-        }
-
-        .progress-bar {
-            background: linear-gradient(90deg, #FFA500, #FF4500);
-            height: 100%;
-            width: 0%;
-            text-align: center;
-            line-height: 30px;
-            color: white;
-            font-weight: bold;
-            border-radius: 20px 0 0 20px;
-            transition: width 0.4s ease;
-        }
-
-        .progress-category {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin-bottom: 20px;
-        }
-
-        .progress-category h3 {
-            margin: 0;
-            color: #333;
-        }
-
-        /* Weapon Cards */
-        .weapon-list {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            padding: 0;
-            list-style: none;
-        }
-
-        .weapon-card {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            width: 150px;
-            text-align: center;
-            padding: 15px;
-            transition: transform 0.3s, box-shadow 0.3s;
-            cursor: pointer;
-        }
-
-        .weapon-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .weapon-card a {
-            text-decoration: none;
-            color: #FFA500;
-            font-weight: bold;
-            font-size: 1rem;
-        }
-    </style>
 </head>
 <body>
     <!-- Header -->
@@ -83,7 +13,7 @@
         <nav>
             <ul class="nav">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="categories/assault_rifles.html">Categorías</a></li>
+                <li><a href="categories/categories_index.html">Categorías</a></li>
                 <li><a href="dashboard.html">Mi Progreso</a></li>
             </ul>
         </nav>
@@ -92,54 +22,50 @@
     <!-- Main Content -->
     <main class="content">
         <section id="general-progress">
-            <h2>Progreso General</h2>
-            <div class="progress-container">
-                <div class="progress-bar" id="general-progress-bar" style="width: 0%;">0%</div>
+            <div class="progress-card">
+                <h2>Progreso General</h2>
+                <div class="progress-container">
+                    <div class="progress-bar" id="general-progress-bar" style="width: 60%;">60%</div>
+                </div>
             </div>
         </section>
 
         <section id="category-progress">
-            <h2>Progreso por Categoría</h2>
+            <div class="progress-card">
+                <h2>Progreso por Categoría</h2>
+                <div class="progress-category">
+                    <h3>Fusiles de Asalto</h3>
+                    <div class="progress-container">
+                        <div class="progress-bar" id="assault-progress-bar" style="width: 80%;">80%</div>
+                    </div>
+                </div>
 
-            <div class="progress-category">
-                <h3>Fusiles de Asalto</h3>
-                <div class="progress-container">
-                    <div class="progress-bar" id="assault-progress-bar" style="width: 0%;">0%</div>
+                <div class="progress-category">
+                    <h3>Subfusiles</h3>
+                    <div class="progress-container">
+                        <div class="progress-bar" id="smg-progress-bar" style="width: 50%;">50%</div>
+                    </div>
+                </div>
+
+                <div class="progress-category">
+                    <h3>Escopetas</h3>
+                    <div class="progress-container">
+                        <div class="progress-bar" id="shotgun-progress-bar" style="width: 30%;">30%</div>
+                    </div>
                 </div>
             </div>
-
-            <div class="progress-category">
-                <h3>Subfusiles</h3>
-                <div class="progress-container">
-                    <div class="progress-bar" id="smg-progress-bar" style="width: 0%;">0%</div>
-                </div>
-            </div>
-
-            <div class="progress-category">
-                <h3>Escopetas</h3>
-                <div class="progress-container">
-                    <div class="progress-bar" id="shotgun-progress-bar" style="width: 0%;">0%</div>
-                </div>
-            </div>
-
-            <!-- Add more categories as needed -->
         </section>
 
         <section id="weapon-progress">
-            <h2>Detalles de Progreso por Arma</h2>
-            <p>Consulta el progreso detallado de cada arma:</p>
-            <ul class="weapon-list">
-                <li class="weapon-card">
-                    <a href="weapons/rifles_asaltos/xm4.html">XM4</a>
-                </li>
-                <li class="weapon-card">
-                    <a href="weapons/rifles_asaltos/ak47.html">AK-74</a>
-                </li>
-                <li class="weapon-card">
-                    <a href="weapons/rifles_asaltos/ames85.html">AMES 85</a>
-                </li>
-                <!-- Add more weapons as needed -->
-            </ul>
+            <div class="progress-card">
+                <h2>Detalles de Progreso por Arma</h2>
+                <p>Consulta el progreso detallado de cada arma:</p>
+                <div class="weapon-buttons">
+                    <a href="weapons/rifles_asaltos/xm4.html" class="weapon-btn">XM4</a>
+                    <a href="weapons/rifles_asaltos/ak47.html" class="weapon-btn">AK-74</a>
+                    <a href="weapons/rifles_asaltos/ames85.html" class="weapon-btn">AMES 85</a>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -147,32 +73,5 @@
     <footer class="page-footer">
         <p>&copy; 2025 Camo Tracker | Creado por Samueh02</p>
     </footer>
-
-    <script>
-        // Example of progress calculation (replace with real data)
-        function calculateProgress() {
-            // Simulate progress values (replace with actual logic later)
-            const generalProgress = 60; // Example: 60%
-            const assaultProgress = 80; // Example: 80%
-            const smgProgress = 50; // Example: 50%
-            const shotgunProgress = 30; // Example: 30%
-
-            // Update progress bars
-            document.getElementById('general-progress-bar').style.width = generalProgress + '%';
-            document.getElementById('general-progress-bar').textContent = generalProgress + '%';
-
-            document.getElementById('assault-progress-bar').style.width = assaultProgress + '%';
-            document.getElementById('assault-progress-bar').textContent = assaultProgress + '%';
-
-            document.getElementById('smg-progress-bar').style.width = smgProgress + '%';
-            document.getElementById('smg-progress-bar').textContent = smgProgress + '%';
-
-            document.getElementById('shotgun-progress-bar').style.width = shotgunProgress + '%';
-            document.getElementById('shotgun-progress-bar').textContent = shotgunProgress + '%';
-        }
-
-        // Call function on page load
-        window.onload = calculateProgress;
-    </script>
 </body>
 </html>
